Banner Student Updates  - added ability to import multiple curriculum information for a student, using the same XML format as in the student import    - the XML message is backwards compatible (student element can either have academicArea, major, and classification attributes, or the studentAcadAreaClass and studentMajors elements)  - added ability to include student overrides    - format: <override type="TIME-CNFLT" subject="ACCT" courseNbr="343" crn="20153"/>      - crn is optional, no override reservation restrictions are created when omitted